--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,60 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    width: 100%;
+    background-color: #264653
+}
+header img {
+    image-resolution: 200px 200px;
+    width: 200px;
+}
+
+nav {
+    margin: 0 auto;
+    width: 960px;
+    display: flex;
+}
+nav ul {
+    display: flex;
+    align-items: center;
+}
+nav ul li a {
+    padding: 1rem;
+    display: flex;
+}
+nav a {
+    color: rgb(209, 209, 209);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    text-decoration: none;
+    }
+main {
+    background-color: #2A9D8F;
+}
+main h1 {
+    font-family: 'Righteous', cursive;
+    font-size: 64px;
+    width: 960px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: #264653;
+}
