--- a/css/home.css
+++ b/css/home.css
@@ -57,4 +57,23 @@ main h1 {
 
 footer {
     background-color: #264653;
+    width: 100%;
+    padding: 25px;
+}
+footer h3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: whitesmoke;
+    font-family: 'Righteous', cursive;;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+footer section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+footer section a {
+    margin: 0px 10px 0px 10px;
 }
