--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     background-color: #E76F51;
 }
 
@@ -23,17 +23,26 @@ nav {
 }
 nav ul {
     display: flex;
-    align-items: center;
+    align-items:center;
 }
+
 nav ul li a {
-    padding: 1rem;
+    font-family: 'Righteous', cursive;
+    color: #264653;
+    padding: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
     display: flex;
+    border: 1px black solid;
+    border-radius: 3px;
+    background-color: #2A9D8F;
 }
 nav a {
     color: rgb(209, 209, 209);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     text-decoration: none;
+    
     }
 main {
     background-color: #2A9D8F;
@@ -43,12 +52,14 @@ main {
 }
 main h1 {
     background-color: #264653;
+    color: #E9C46A;
     border-radius: 20px 20px 0 0;
     font-family: 'Righteous', cursive;
     font-size: 64px;
     width: 960px;
     text-align: center;
     margin: 0 auto;
+    padding: 10px;
 }
 
 section:nth-child(1) {
@@ -71,6 +82,7 @@ div {
 div>h3 {
     font-size: 32px;
     font-weight: 700;
+    color: #264653;
 }
 
 
@@ -104,6 +116,7 @@ article section:nth-child(3)>h3 {
     font-weight: 700;
     text-decoration: underline;
     padding: 10px;
+    color: #264653;
 }
 
 article section:nth-child(3)>ul {
@@ -124,16 +137,16 @@ article section:nth-child(4)>h3 {
     font-weight: 700;
     text-decoration: underline;
     padding: 10px;
+    color: #264653;
 }
 
 article section:nth-child(4)>p {
     background-color: #E9C46A;
     padding: 20px;
     border-radius: 30px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     border: 1px solid black;
 }
-
 
 
 footer {
@@ -169,10 +182,13 @@ footer section:nth-child(3) {
 footer section:nth-child(3)>h3 {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-family: 'Righteous', cursive;
+    font-size: 24px;
 }
 
 footer section:nth-child(3)>ul li {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 5px;
 }
