--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,120 @@
-body {
-    background-color: lightgreen;
+* {
+  box-sizing: border-box;
 }
 
-table, th, td {
-    font-family: 'Courier New', Courier, monospace;
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+  background-color: #E76F51;
+}
+
+header {
+  width: 100%;
+  background-color: #264653;
+}
+header img {
+  image-resolution: 200px 200px;
+  width: 200px;
+}
+
+nav {
+  margin: 0 auto;
+  width: 960px;
+  display: flex;
+}
+nav ul {
+  display: flex;
+  align-items:center;
+}
+
+nav ul li a {
+  font-family: 'Righteous', cursive;
+  color: #264653;
+  padding: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
+  display: flex;
+  border: 1px black solid;
+  border-radius: 3px;
+  background-color: #2A9D8F;
+}
+nav a {
+  color: rgb(209, 209, 209);
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  text-decoration: none;
+  
+  }
+
+  main {
+    background-color: #2A9D8F;
+    margin: 30px auto;
+    width: 960px;
+    border-radius: 20px;
+}
+main h1 {
+    background-color: #264653;
+    color: #E9C46A;
+    font-family: 'Righteous', cursive;
+    font-size: 64px;
+    width: 960px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+
+
+
+table, tr, th, td {
+  font-family: 'Roboto Condensed', sans-serif;
+  color: whitesmoke;
     border: 1px solid black;
-    padding: 1px;
-    background-color: cyan;
+    background-color: #2a9d8f;
     border-radius: 5px;
     margin: auto;
-    padding:5px;
+    padding: 10px;
   }
-  h1 {
-    font-family: Georgia, sans-serif;
-    font-size: 3em;
-    letter-spacing: -2px;
-    text-align: center;
-  }
-  
+
+  footer {
+    background-color: #264653;
+    width: 100%;
+    padding: 25px;
+}
+footer>h3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: whitesmoke;
+    font-family: 'Righteous', cursive;;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+footer>section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+footer>section a {
+    margin: 0px 10px 0px 10px;
+}
+
+footer section:nth-child(3) { 
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+footer section:nth-child(3)>h3 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Righteous', cursive;
+    font-size: 24px;
+}
+
+footer section:nth-child(3)>ul li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 5px;
+}
