--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,48 @@ table, tr, th, td {
     padding: 10px;
   }
 
+  form {
+      border: 1px solid black;
+      background-color: #2a9d8f;
+      border-radius: 5px;
+      margin: auto;
+      padding: 10px;
+  }
+  form legend {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 24px;
+  }
+  fieldset {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-start;
+  }
+form input {
+  border: 1px black solid;
+  width: 200px;
+  margin: 10px;
+}
+  form button {
+    border: 1px #E76F51 solid;
+    border-radius: 20px;
+    padding: 5px 10px 5px 10px;
+    margin-top: 10px;
+    background-color: #264653;
+    color: #E9C46A;
+  }
+  form button:hover {
+    border: 1px black solid;
+    border-radius: 20px;
+    padding: 5px 10px 5px 10px;
+    margin-top: 10px;
+    background-color: #E9C46A;
+    color: #264653;
+  }
+
   footer {
     background-color: #264653;
     width: 100%;
