--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ main h1 {
 
 
 table, tr, th, td {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   color: whitesmoke;
     border: 1px solid black;
     background-color: #2a9d8f;
